--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,11 @@
 .read-the-docs {
   color: #888;
 }
+
+/* Responsive adjustments */
+@media screen and (max-width: 768px) {
+ .typing-svg {
+  margin-left: 72px!;
+ }
+
+}
