--- a/src/components/educationSection/Education.css
+++ b/src/components/educationSection/Education.css
@@ -60,7 +60,7 @@
 }
 
 .IoMdSchool {
-  font-size: 140px;
+  font-size: 140px!;
 }
 
 /* Grade text */
@@ -85,15 +85,6 @@
     font-weight: 50px;
     height: 20px;
   }
- 
-   .icon-responsive {
-    width: 38px!;
-    height: 175px!;
-    margin-left: -20px!;
-    margin-top: -89px!;
-    border-radius: 50%!;
-  }
-
   .timeline-elements {
     padding: 1rem;
   }
